--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,48 +1,34 @@
-# docker-compose.dev.yml
-# Configuration for the development environment
-
 services:
-  backend:
-    # Use the development Dockerfile
+  web:
     build:
+      context: .
       dockerfile: Dockerfile.dev
-    # Map backend port to host (e.g., Django dev server)
-    ports:
-      - "8000:8000"
-    # Mount the backend code for hot-reloading
-    volumes:
-      - ./backend:/app
-    # Override the command to run the Django development server
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DEBUG=True # Example debug setting
-      # Other dev specific environment variables
-
-  frontend:
-    # Use the development Dockerfile
-    build:
-      dockerfile: Dockerfile.dev
-    # Map frontend port to host (e.g., Vite dev server)
-    ports:
-      - "3000:3000"
-    # Mount the frontend code for hot-reloading
     volumes:
-      - ./frontend:/app
-      # Optional: If node_modules are giving trouble, you might need to manage them carefully
-      # - /app/node_modules
-    # Override the command to run the Vite development server
-    command: >
-      sh -c "npm install && npm run dev -- --host 0.0.0.0"
-    environment:
-      - NODE_ENV=development
-      # Add env vars needed by your frontend, e.g., API URL
-      - VITE_API_URL=http://backend:8000
-
-  # Database service usually remains the same or slightly simpler in dev
-  db:
-    # Can add volumes or other dev-specific db settings if needed, otherwise it inherits from compose.yaml
+      - ./:/app
     ports:
-      # Optional: Map database port for local access (e.g., GUI tool)
-      - "5432:5432"
+      - "8000:8000"
+    environment:
+      - DEBUG=True
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=postgres
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=postgres
+    depends_on:
+      - db
+    networks:
+      - app_network
+
+  proxy:
+    image: nginx:stable-alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ./ngninx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - web
+    networks:
+      - app_network
