--- a/ngninx/nginx.conf
+++ b/ngninx/nginx.conf
@@ -1,27 +1,48 @@
-server {
-    listen 80;
-    server_tokens off;
+events {}
 
-    location / {
-        # Serve the frontend application
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+http {
+    upstream django {
+        server web:8000;   # service name “web” on Docker network
     }
 
-    location /api/ {
-        # Proxy API requests to the backend service
-        proxy_pass http://backend:8000;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass         http://django;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
     }
-
-    # Optional: Serve backend static and media files directly via Nginx
-    # location /static/ {
-    #     alias /app/static/;
-    # }
-
-    # location /media/ {
-    #     alias /app/media/;
-    # }
 }
+
+
+# server {
+#     listen 80;
+#     server_tokens off;
+
+#     location / {
+#         # Serve the frontend application
+#         root /usr/share/nginx/html;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     location /api/ {
+#         # Proxy API requests to the backend service
+#         proxy_pass http://backend:8000;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
+
+#     # Optional: Serve backend static and media files directly via Nginx
+#     # location /static/ {
+#     #     alias /app/static/;
+#     # }
+
+#     # location /media/ {
+#     #     alias /app/media/;
+#     # }
+# }
