--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,27 +1,42 @@
-# backend/Dockerfile.dev
-# Development Dockerfile for the Django backend
+# Base image with Python & Node for frontend tooling (if needed)
+FROM python:3.12-slim
 
-# Use a base image with Python
-FROM python:3.12 AS backend
+# Create a non-root user and group
+RUN groupadd --gid 1000 appgroup \
+    && useradd --uid 1000 --gid appgroup --create-home appuser
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set working directory
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt .
-COPY requirements.dev.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir -r requirements.dev.txt
+# Install system dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       build-essential \
+       curl \
+       gnupg \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy the application code (will be volume mounted over in docker-compose.dev.yml)
+# (Optional) NodeJS for any asset builds
+RUN curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - \
+    && apt-get install -y nodejs \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy dependency definitions
+COPY requirements.txt requirements.dev.txt ./
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt \
+    && pip install --no-cache-dir -r requirements.dev.txt
+
+# Copy application code
 COPY . .
 
-# Expose the port the Django dev server runs on
-EXPOSE 8000
+# Ensure files are owned by our non-root user
+RUN chown -R appuser:appgroup /app
 
-# Command to run the Django dev server (overridden in docker-compose.dev.yml)
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Switch to non-root
+USER appuser
+
+# Default entrypoint: run migrations & then start Django dev server
+# (You can override this in docker-compose)
+ENTRYPOINT ["./docker-entrypoint.sh"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
